--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,9 @@ description = "Automation Orchestrator focused on organized and scalable Python 
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
-    "typer>=0.9.0"
+    "typer>=0.9.0",
+    "PyYAML>=6.0.0",
+    "platformdirs>=4.0.0"
 ]
 
 [project.scripts]
